--- a/literature.bib
+++ b/literature.bib
@@ -1238,6 +1238,24 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/696FCDUB/Hess et al. - 2008 - GROMACS 4  Algorithms for Highly Efficient, Load-.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/ETVRHQWF/ct700301q.html:text/html}
 }
 
+@article{penrose_foundations_1979,
+	title = {Foundations of statistical mechanics},
+	volume = {42},
+	issn = {0034-4885},
+	url = {http://iopscience.iop.org/0034-4885/42/12/002},
+	doi = {10.1088/0034-4885/42/12/002},
+	abstract = {Developments in the foundations of statistical mechanics during the past ten years or so. The author discusses how statistical concepts enter the treatment of deterministic mechanical systems, with particular reference to trajectory instabilities and to the {KAM} theorem. Then he deals with large systems: the thermodynamic limit and the theory of infinite systems. Non-equilibrium statistical mechanics is covered but {LC} relativistic statistical mechanics is not.},
+	language = {en},
+	number = {12},
+	urldate = {2014-11-10},
+	journal = {Reports on Progress in Physics},
+	author = {Penrose, O.},
+	month = dec,
+	year = {1979},
+	pages = {1937},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/F2H3FI94/Penrose - 1979 - Foundations of statistical mechanics.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/AQ4KFSDP/002.html:text/html}
+}
+
 @article{clark_hybrid_1996,
 	title = {Hybrid Monte Carlo method for off-lattice simulation of processes involving steps with widely varying rates},
 	volume = {10},
@@ -1274,4 +1292,186 @@ The {MD} program can handle rectangular periodic boundary conditions with temper
 	keywords = {Condensed Matter, Laser Technology and Physics, Photonics, Nanotechnology, Optical and Electronic Materials, Surfaces and Interfaces, Thin Films},
 	pages = {89--102},
 	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/JKVSGAPB/Biehl and Much - 2005 - Off-Lattice KMC Simulations of Stranski-Krastanov-.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/5CRH5HVI/1-4020-3315-X_6.html:text/html}
+}
+
+@article{song_reactive_2013,
+	title = {A reactive molecular dynamic simulation of oxidation of a silicon nanocluster},
+	volume = {15},
+	issn = {1388-0764, 1572-896X},
+	url = {http://link.springer.com/article/10.1007/s11051-012-1309-3},
+	doi = {10.1007/s11051-012-1309-3},
+	abstract = {This study presents an atomic level of molecular dynamic simulation of oxidation of silicon nanoparticle in use of a reactive force field ({ReaxFF}). The oxidation dynamics is revealed through the energy release, bond evolution and oxygen exchange processes. The oxidation is found to proceed in the manner of evolution of silicon–oxygen bond configuration, accompanied by the oxygen exchange process. The heat of reaction and the activation energy of the bond transformation process are also estimated, which indicates the capability of {ReaxFF} in the simulation of energetic materials.},
+	language = {en},
+	number = {1},
+	urldate = {2014-11-10},
+	journal = {Journal of Nanoparticle Research},
+	author = {Song, Pengxiang and Ding, Yulong and Wen, Dongsheng},
+	month = jan,
+	year = {2013},
+	keywords = {Characterization and Evaluation of Materials, Energetic material, Inorganic Chemistry, Molecular dynamics, Nanocluster, Nanofuel, Nanotechnology, Optics, Optoelectronics, Plasmonics and Optical Devices, Oxidation, Physical Chemistry, silicon},
+	pages = {1--11},
+	file = {Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/T5IKN2ID/s11051-012-1309-3.html:text/html}
+}
+
+@article{martinez_packmol:_2009,
+	title = {{PACKMOL}: A package for building initial configurations for molecular dynamics simulations},
+	volume = {30},
+	copyright = {Copyright © 2009 Wiley Periodicals, Inc.},
+	issn = {1096-987X},
+	shorttitle = {{PACKMOL}},
+	url = {http://onlinelibrary.wiley.com/doi/10.1002/jcc.21224/abstract},
+	doi = {10.1002/jcc.21224},
+	abstract = {Adequate initial configurations for molecular dynamics simulations consist of arrangements of molecules distributed in space in such a way to approximately represent the system's overall structure. In order that the simulations are not disrupted by large van der Waals repulsive interactions, atoms from different molecules must keep safe pairwise distances. Obtaining such a molecular arrangement can be considered a packing problem: Each type molecule must satisfy spatial constraints related to the geometry of the system, and the distance between atoms of different molecules must be greater than some specified tolerance. We have developed a code able to pack millions of atoms, grouped in arbitrarily complex molecules, inside a variety of three-dimensional regions. The regions may be intersections of spheres, ellipses, cylinders, planes, or boxes. The user must provide only the structure of one molecule of each type and the geometrical constraints that each type of molecule must satisfy. Building complex mixtures, interfaces, solvating biomolecules in water, other solvents, or mixtures of solvents, is straightforward. In addition, different atoms belonging to the same molecule may also be restricted to different spatial regions, in such a way that more ordered molecular arrangements can be built, as micelles, lipid double-layers, etc. The packing time for state-of-the-art molecular dynamics systems varies from a few seconds to a few minutes in a personal computer. The input files are simple and currently compatible with {PDB}, Tinker, Molden, or Moldy coordinate files. The package is distributed as free software and can be downloaded from http://www.ime.unicamp.br/∼martinez/packmol/. © 2009 Wiley Periodicals, Inc. J Comput Chem, 2009},
+	language = {en},
+	number = {13},
+	urldate = {2014-11-10},
+	journal = {Journal of Computational Chemistry},
+	author = {Martínez, L. and Andrade, R. and Birgin, E. G. and Martínez, J. M.},
+	month = oct,
+	year = {2009},
+	keywords = {initial configuration, large-scale optimization, Molecular dynamics, packing, Packmol},
+	pages = {2157--2164},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/XWETJCB2/Martínez et al. - 2009 - PACKMOL A package for building initial configurat.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/Z69MWM2W/full.html:text/html}
+}
+
+@article{thompson_ii._1968,
+	title = {{II}. The energy spectrum of ejected atoms during the high energy sputtering of gold},
+	volume = {18},
+	issn = {0031-8086},
+	url = {http://dx.doi.org/10.1080/14786436808227358},
+	doi = {10.1080/14786436808227358},
+	abstract = {Using the technique described in part I, the energy spectrum of sputtered atoms has been determined for several gold specimens, both single crystals and polycrystalline aggregates. The 〈110〉, 〈110〉 and 〈121〉 directions of ejection were chosen for the experiments. Bombardment was with either 43 kev A+ ions, 43 kev Xe+ ions or 66 kev Xe+ ions. The energies of the ejected atoms ranged from some 10−2 ev up to about 104 ev. A peak was generally observed in the energy spectrum between 1 and 10 ev. On the high energy side of this peak the spectrum behaved roughly like E −2, though there were significant deviations from this, particularly for 〈100〉 ejection. A theoretical model is developed in which ejection results principally from the generation of atomic collision cascades by the bombarding ion. The assumptions that energy in the cascades is shared by two-body collisions and that the mean collision free path is independent of energy lead to an E −2 spectrum and this prediction should hold roughly from 10 to 103 ev. It is shown that the consequence of surface binding of atoms, with a binding energy E b, is a refraction of atomic trajectories and a peak in the spectrum near E = E b. This random cascade model is unable to explain all features of the spectra, particularly the sharp peaks that appear when they are plotted as time-of-flight spectra. But a more advanced model, which allows for the generation of focused collision sequences by the cascade, fits the data extremely well. This allows for both types of sequence, assisted and simple, and represents their separate characteristics realistically. Deviations from the predictions of the advanced model are confined to energies below 1 ev, where thermal spikes are thought to contribute, and above 103 ev. where the collision free path is probably enhanced by channelling and the normal decrease in cross section with energy. At room temperature the discrepancy only amounts to about 10\% of the total sputtering yield. The random cascade and focused collision sequences contribute roughly equal amounts. From a comparison of the predicted and observed spectra it can be deduced, firstly, that for simple focused collision sequences travelling along the 〈110〉 rows the maximum energy of propagation is 167±25 ev and their maximum range is at least 21 collisions; secondly, that for 〈110〉 assisted sequences the energy limit is 500±100 ev and the maximum range is about 23 collisions: thirdly, that the effective binding energy to the gold surface in these experiments varied from 2·5 to 4·1 ev. An interatomic potential for Au is deduced, consistent with the observed 〈110〉 focusing energy and the bulk modulus of elasticity. In the Born–Mayer form. A exp(—r/b), the constants are A = 200±60 kev and b = 2 ·88/(14 ·3 ·0 ·4) Å, valid from 1 ·4 to 2 ·88 Å.},
+	number = {152},
+	urldate = {2014-11-10},
+	journal = {Philosophical Magazine},
+	author = {Thompson, M. W.},
+	month = aug,
+	year = {1968},
+	pages = {377--414},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/6DVSPTBX/Thompson - 1968 - II. The energy spectrum of ejected atoms during th.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/MQ3QU866/14786436808227358.html:text/html}
+}
+
+@article{bird_giant_1995,
+	title = {Giant Magnetoresistance in Electrodeposited Ni/Cu and Co/Cu Multilayers},
+	volume = {142},
+	issn = {0013-4651, 1945-7111},
+	url = {http://jes.ecsdl.org/content/142/4/L65},
+	doi = {10.1149/1.2044185},
+	abstract = {Giant magnetoresistance ({GMR}) measurements of both nickel‐copper and cobalt‐copper multilayer systems are compared with each other and compared to theoretical predictions. The results demonstrate that the replacement of nickel by cobalt significantly enhances the {GMR} effect and that the magnitude of this effect is related to the copper, or nonmagnetic, layer thickness in a predictable fashion.},
+	language = {en},
+	number = {4},
+	urldate = {2014-11-10},
+	journal = {Journal of The Electrochemical Society},
+	author = {Bird, Keith D. and Schlesinger, M.},
+	month = apr,
+	year = {1995},
+	keywords = {electrodeposition, Giant magnetoresistance, magnetic multilayers, Metallic thin films, size effect},
+	pages = {L65--L66},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/H2WTQCQN/Bird and Schlesinger - 1995 - Giant Magnetoresistance in Electrodeposited NiCu .pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/978NMXTK/L65.html:text/html}
+}
+
+@article{torre_study_2002,
+	title = {Study of self-limiting oxidation of silicon nanoclusters by atomistic simulations},
+	volume = {92},
+	issn = {0021-8979, 1089-7550},
+	url = {http://scitation.aip.org/content/aip/journal/jap/92/2/10.1063/1.1489094},
+	doi = {10.1063/1.1489094},
+	abstract = {We present molecular dynamics simulations directed at understanding self-limiting oxidation of nanoclusters. Atomic oxygen is inserted in an atom-by-atom way in the siliconbonds to form silicon oxide. First, we focus on planar oxidation to calibrate our model and test its capabilities. Then, we present results on oxidation of 50 Å diam silicon spheres. Kinetic causes of self-limitation are investigated by drawing a map of the local stress in the Si/{SiO} 2 system. We obtain stresses in contrast to in continuum models. For thin oxides, we find in particular tensile pressure in the silicon core and a pressure gradient in the oxide shell. We investigate the effect of pressure gradient on the O 2 transport within the framework of Nerst–Eintein’s transport equation. We find that a pressure gradient compatible with experimental estimates yields self-limitation of the oxidation kinetics.},
+	number = {2},
+	urldate = {2014-11-10},
+	journal = {Journal of Applied Physics},
+	author = {Torre, J. Dalla and Bocquet, J.-L. and Limoge, Y. and Crocombette, J.-P. and Adam, E. and Martin, G. and Baron, T. and Rivallin, P. and Mur, P.},
+	month = jul,
+	year = {2002},
+	keywords = {Bond formation, Chemical bonds, Nanoparticles, Oxidation, silicon},
+	pages = {1084--1094},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/UGG3BD5J/Torre et al. - 2002 - Study of self-limiting oxidation of silicon nanocl.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/EIN97PKX/1.html:text/html}
+}
+
+@article{van_duin_reaxffsio_2003,
+	title = {{ReaxFFSiO} Reactive Force Field for Silicon and Silicon Oxide Systems},
+	volume = {107},
+	issn = {1089-5639},
+	url = {http://dx.doi.org/10.1021/jp0276303},
+	doi = {10.1021/jp0276303},
+	abstract = {To predict the structures, properties, and chemistry of materials involving silicon and silicon oxides; interfaces between these materials; and hydrolysis of such systems, we have developed the {ReaxFFSiO}, reactive force field. The parameters for this force field were obtained from fitting to the results of quantum chemical ({QC}) calculations on the structures and energy barriers for a number of silicon oxide clusters and on the equations of state for condensed phases of Si and {SiO}2 from {QC}. We expect that {ReaxFFSiO} will allow accurate dynamical simulations of bond breaking processes in large silicon and silicon oxide systems. {ReaxFFSiO} is based closely on the potential functions of the {ReaxFFCH} reactive force field for hydrocarbons, so that it should also be useful for describing reactions of organics with Si and {SiO}2 systems.},
+	number = {19},
+	urldate = {2014-11-10},
+	journal = {The Journal of Physical Chemistry A},
+	author = {van Duin, Adri C. T. and Strachan, Alejandro and Stewman, Shannon and Zhang, Qingsong and Xu, Xin and Goddard, William A.},
+	month = may,
+	year = {2003},
+	pages = {3803--3811},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/INS8HRC7/van Duin et al. - 2003 - ReaxFFSiO Reactive Force Field for Silicon and Sil.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/IQG3TTXQ/jp0276303.html:text/html}
+}
+
+@article{thompson_ii._1968-1,
+	title = {{II}. The energy spectrum of ejected atoms during the high energy sputtering of gold},
+	volume = {18},
+	issn = {0031-8086},
+	url = {http://dx.doi.org/10.1080/14786436808227358},
+	doi = {10.1080/14786436808227358},
+	abstract = {Using the technique described in part I, the energy spectrum of sputtered atoms has been determined for several gold specimens, both single crystals and polycrystalline aggregates. The 〈110〉, 〈110〉 and 〈121〉 directions of ejection were chosen for the experiments. Bombardment was with either 43 kev A+ ions, 43 kev Xe+ ions or 66 kev Xe+ ions. The energies of the ejected atoms ranged from some 10−2 ev up to about 104 ev. A peak was generally observed in the energy spectrum between 1 and 10 ev. On the high energy side of this peak the spectrum behaved roughly like E −2, though there were significant deviations from this, particularly for 〈100〉 ejection. A theoretical model is developed in which ejection results principally from the generation of atomic collision cascades by the bombarding ion. The assumptions that energy in the cascades is shared by two-body collisions and that the mean collision free path is independent of energy lead to an E −2 spectrum and this prediction should hold roughly from 10 to 103 ev. It is shown that the consequence of surface binding of atoms, with a binding energy E b, is a refraction of atomic trajectories and a peak in the spectrum near E = E b. This random cascade model is unable to explain all features of the spectra, particularly the sharp peaks that appear when they are plotted as time-of-flight spectra. But a more advanced model, which allows for the generation of focused collision sequences by the cascade, fits the data extremely well. This allows for both types of sequence, assisted and simple, and represents their separate characteristics realistically. Deviations from the predictions of the advanced model are confined to energies below 1 ev, where thermal spikes are thought to contribute, and above 103 ev. where the collision free path is probably enhanced by channelling and the normal decrease in cross section with energy. At room temperature the discrepancy only amounts to about 10\% of the total sputtering yield. The random cascade and focused collision sequences contribute roughly equal amounts. From a comparison of the predicted and observed spectra it can be deduced, firstly, that for simple focused collision sequences travelling along the 〈110〉 rows the maximum energy of propagation is 167±25 ev and their maximum range is at least 21 collisions; secondly, that for 〈110〉 assisted sequences the energy limit is 500±100 ev and the maximum range is about 23 collisions: thirdly, that the effective binding energy to the gold surface in these experiments varied from 2·5 to 4·1 ev. An interatomic potential for Au is deduced, consistent with the observed 〈110〉 focusing energy and the bulk modulus of elasticity. In the Born–Mayer form. A exp(—r/b), the constants are A = 200±60 kev and b = 2 ·88/(14 ·3 ·0 ·4) Å, valid from 1 ·4 to 2 ·88 Å.},
+	number = {152},
+	urldate = {2014-11-10},
+	journal = {Philosophical Magazine},
+	author = {Thompson, M. W.},
+	month = aug,
+	year = {1968},
+	pages = {377--414},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/PQ8XBXBS/Thompson - 1968 - II. The energy spectrum of ejected atoms during th.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/9VZVASBQ/14786436808227358.html:text/html}
+}
+
+@article{shapovalov_ab_2000,
+	title = {Ab Initio Study of Water Adsorption on α-Al2O3 (0001) Crystal Surface},
+	volume = {104},
+	issn = {1520-6106},
+	url = {http://dx.doi.org/10.1021/jp001399g},
+	doi = {10.1021/jp001399g},
+	abstract = {Ab Initio embedded cluster calculations were performed to study water adsorption on Al-terminated (0001) α-Al2O3 surface. We used the surface charge representation of the embedding electrostatic potential ({SCREEP}) model to give an accurate representation of the Madelung potential at the adsorption site. The geometry of the cluster was optimized to take into account the surface relaxation. Adsorption energies were obtained using the N-layer integrated molecular orbital model ({ONIOM}). In the case of water adsorption it was found that both dissociative and molecular adsorption minima exist, with adsorption energies of ?31.57 and ?23.40 kcal/mol, respectively, in agreement with experiment. Bond orders, covalences and full atomic valences were analyzed to investigate the changes in the chemical bonding during adsorption. Our results provide some insight into the scrambling of water and crystal oxygen atoms during water desorption in isotopic exchange experiments.},
+	number = {42},
+	urldate = {2014-11-10},
+	journal = {The Journal of Physical Chemistry B},
+	author = {Shapovalov, Vladimir and Truong, Thanh N.},
+	month = oct,
+	year = {2000},
+	pages = {9859--9863},
+	file = {ACS Full Text PDF w/ Links:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/JCA5FGSU/Shapovalov and Truong - 2000 - Ab Initio Study of Water Adsorption on α-Al2O3 (00.pdf:application/pdf;ACS Full Text Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/FPDVETG3/jp001399g.html:text/html}
+}
+
+@article{swanepoel_determination_1984,
+	title = {Determination of surface roughness and optical constants of inhomogeneous amorphous silicon films},
+	volume = {17},
+	issn = {0022-3735},
+	url = {http://iopscience.iop.org/0022-3735/17/10/023},
+	doi = {10.1088/0022-3735/17/10/023},
+	abstract = {Inhomogeneities in thin films have a large influence on the optical transmission spectrum. If not corrected for, this may lead to too large calculated values for the absorption coefficient or the apparent presence of an absorption band tail as well as serious errors in the values of refractive index and thickness. The effects of thickness variation, surface roughness and variation in refractive index on the transmission spectrum are analysed. Analytical expressions are derived from which all the optical constants of an inhomogeneous film can be calculated from the transmission spectrum.},
+	language = {en},
+	number = {10},
+	urldate = {2014-11-10},
+	journal = {Journal of Physics E: Scientific Instruments},
+	author = {Swanepoel, R.},
+	month = oct,
+	year = {1984},
+	pages = {896},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/8QEUZ4A5/Swanepoel - 1984 - Determination of surface roughness and optical con.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/HHKMP8KF/023.html:text/html}
+}
+
+@article{gago_nanopatterning_2002,
+	title = {Nanopatterning of silicon surfaces by low-energy ion-beam sputtering: dependence on the angle of ion incidence},
+	volume = {13},
+	issn = {0957-4484},
+	shorttitle = {Nanopatterning of silicon surfaces by low-energy ion-beam sputtering},
+	url = {http://iopscience.iop.org/0957-4484/13/3/313},
+	doi = {10.1088/0957-4484/13/3/313},
+	abstract = {We report on the production of nanoscale patterning on Si substrates by low-energy ion-beam sputtering. The surface morphology and structure of the irradiated surface were studied by atomic force microscopy ({AFM}) and high-resolution transmission electron microscopy ({HRTEM}). Under ion irradiation at off-normal incidence angle ({\textasciitilde}50°), {AFM} images show the formation of both nanoripple and sawtooth-like structures for sputtering times longer than 20 min. The latter feature coarsens appreciably after 60 min of sputtering, inducing a large increase in the surface roughness. This behaviour is attributed to the preferential direction determined on the substrate by the ion beam for this incidence angle, leading to shadowing effects among surface features in the sputtering process. Under irradiation at normal incidence, the formation of an hexagonal array of nanodots is induced for irradiation times longer than 2 min. The shape and crystallinity of the nanodots were determined by {HRTEM}. At this incidence angle, the surface roughness is very low and remains largely unchanged even after 16 h of sputtering. For the two angle conditions studied, the formation of the corresponding surface structures can be understood as the interplay between an instability due to the sputtering yield dependence on the local surface curvature and surface smoothing processes such as surface diffusion.},
+	language = {en},
+	number = {3},
+	urldate = {2014-11-10},
+	journal = {Nanotechnology},
+	author = {Gago, R. and Vázquez, L. and Cuerno, R. and Varela, M. and Ballesteros, C. and Albella, J. M.},
+	month = jun,
+	year = {2002},
+	pages = {304},
+	file = {Full Text PDF:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/QI3XVUJA/Gago et al. - 2002 - Nanopatterning of silicon surfaces by low-energy i.pdf:application/pdf;Snapshot:/home/e.lorenz/.mozilla/firefox/e.lorenz/zotero/storage/8FC5ND8K/313.html:text/html}
 }
