--- a/mdmethods.tex
+++ b/mdmethods.tex
@@ -28,7 +28,7 @@ Bei Kristallen kann eine Alpha-Form (Abschnitt~\ref{dataalphaform}) mit einem $\
 \subsection{Bestimmung der Dichte und Temperatur}
 
 Zur Bestimmung der Dichte des Blocks eines amorphen Materials stehen verschiedene Möglichkeiten zur Verfügung, die letztendlich alle auf Zählung der Atome innerhalb eines begrenzten Volumens zurückgeführt werden können.
-Da das Volumen des Simulationsraumes im großkanonischen Ensemble durch das Barostat oszilliert, muss sie zeitlich über einen größeren Zeitraum als die Dämpfungskonstante $\tau_p$ gemittelt werden, da sie sonst nicht über die gesamte Periode der Oszillation betrachtet wird.
+Da das Volumen des Simulationsraumes im isotherm-isobaren Ensemble durch das Barostat oszilliert, muss sie zeitlich über einen größeren Zeitraum als die Dämpfungskonstante $\tau_p$ gemittelt werden, da sie sonst nicht über die gesamte Periode der Oszillation betrachtet wird.
 
 Ebenso muss zur Bestimmung der Temperatur auf das Konvergenzverhalten des Thermostates geachtet werden.
 Die Temperatur wird aus dem Mittelwert der kinetischen Energie aller Teilchen bestimmt, welche jedoch schwanken kann, weshalb wiederum die Bildung eines Zeitmittelwertes notwendig wird.
