--- a/metadaten.tex
+++ b/metadaten.tex
@@ -38,7 +38,7 @@
 \newcommand{\dcdepartadvisor}{\dcdepartext}
 \newcommand{\dcgroupadvisor}{Simulationsgruppe}
 
-\newcommand{\dckeywords}{Dünnschichten, Gasphasenabscheidung (PVD, CVD), Atomlagenabscheidung (ALD), Multiskalenmodellierung, Kinetic Monte Carlo (KMC), Molekulardynamik (MD)}
+\newcommand{\dckeywords}{Dünne Schichten, chemische Gasphasenabscheidung (CVD), physikalische Gasphasenabscheidung (PVD), Atomlagenabscheidung (ALD), Multiskalenmodellierung, Kinetic Monte Carlo (KMC), Molekulardynamik (MD), ReaxFF}
 
 %%======================================================================
 % Einstellungen des Hyperref-Paketes
