--- a/depositions.tex
+++ b/depositions.tex
@@ -1,17 +1,66 @@
 \section{Gasphasenabscheidungen}
 \label{depositions}
 
-\todoline{Anmerkung von Jörg: Mehr Referenzen zu den Prozessen, spätestens bei ALD}
-
 Gasphasenabscheidungen sind Herstellungsverfahren, bei denen durch physikalische oder chemische Prozesse aus einer Gasphase eine dünne Schicht auf einer Oberfläche aufgewachsen wird.
-Bei den hier untersuchten Arten von Gasphasenabscheidungen handelt es sich um \textbf{Physikalische Gasphasenabscheidung}\cite{mattox_handbook_2010} (PVD, Physical Vapor Deposition), \textbf{Chemische Gasphasenabscheidung}\cite{pierson_handbook_1999} (CVD, Chemical Vapor Deposition) und \textbf{Atomlagenabscheidung} (ALD, Atomic Layer Deposition, eine Sonderform der CVD), die im folgenden vorgestellt werden.
+Bei den hier untersuchten Arten von Gasphasenabscheidungen handelt es sich um \textbf{Physikalische Gasphasenabscheidung}\cite{mattox_handbook_2010} (PVD, Physical Vapor Deposition), \textbf{Chemische Gasphasenabscheidung}\cite{pierson_handbook_1999} (CVD, Chemical Vapor Deposition) und \textbf{Atomlagenabscheidung} (ALD, Atomic Layer Deposition, eine Sonderform der CVD)\cite{suntola_method_1977}, die im folgenden vorgestellt werden.
 
-Allen Verfahren ist gemein, dass einzelne Atome oder Moleküle aus der Gasphase auf der Oberfläche auftreffen, dort physikalisch oder chemisch adsorbiert werden und so mit vorhersehbarer Rate eine dünne Schicht eines gewünschten Materiales bilden.
-
-\todo{Satz klingt komisch}Dennoch hat jeder Prozess seine eigenen Eigenschaften, die es ihm ermöglichen, verschiedene Materialarten mit unterschiedlicher Kontrolle über die Qualität aufzuwachsen.
-
-Tabellen~\ref{tab:deposition-comparison} und~\ref{tab:deposition-materials} sollen einen kurzen Überblick darüber verschaffen, bevor die Prozesse im einzelnen vorgestellt werden.
+Allen Verfahren ist gemein, dass einzelne Atome oder Moleküle aus der Gasphase auf der Oberfläche auftreffen, dort physikalisch oder chemisch adsorbieren und so mit vorhersehbarer Rate eine dünne Schicht eines gewünschten Materiales bilden.
+Die Abscheidungsarten ermöglichen dabei über ihre Adsorptionsbedingungen und die Wahl der Prozessgase die Bildung unterschiedlicher Materialien mit verschiedener Kontrolle der Qualität und Dicke der abgeschiedenen Schicht.
+Tabellen~\ref{tab:deposition-comparison} und~\ref{tab:deposition-materials} sollen einen kurzen Überblick über die vorgestellten Abscheidungsarten und ihre möglichen Materialien verschaffen.
 Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, über die Abbildung~\ref{fig:reactors} einen kurzen Überblick geben soll.
+
+\begin{table}[hb]
+  \oddrowcolors
+  \caption[Eigenschaften von PVD-, CVD- und ALD-Prozessen]{Eigenschaften von PVD-, CVD- und ALD-Prozessen}
+  \label{tab:deposition-comparison}
+  \begin{tabularx}{\textwidth}{|Xccc|}
+    \hline
+    \textbf{Eigenschaften} & \textbf{PVD}    & \textbf{CVD}       & \textbf{ALD}         \\
+    \hline
+    reaktiv                &                 & \cmark             & \cmark               \\
+    kontinuierlich         & \cmark          & \cmark             & zyklisch             \\
+    Gas-Edukte             & Atome, Moleküle & Precursor-Moleküle & Precursor-Moleküle   \\
+    \# Edukte              & 1               & 1+                 & 2+                   \\
+    Nebenprodukte          &                 & \cmark             & \cmark               \\
+    Wachstumsrate          & $\sim t$        & $\sim t$           & $\sim n_\text{cyc.}$ \\
+    \hline
+  \end{tabularx}
+\end{table}
+
+\begin{table}
+  \begin{threeparttable}
+    \caption[Auswahl möglicher Produkte von PVD, CVD und ALD]{
+      Auswahl möglicher Produkte von PVD, CVD und ALD.
+      Weitere Produkte und Precursor finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012}.
+    }
+    \label{tab:deposition-materials}
+    \begin{tabularx}{\textwidth}{XcX}
+     & \begin{minipage}[t]{0.55\textwidth}
+         \oddrowcolors
+         \centering
+         \begin{tabular}{|lccc|}
+           \hline
+           \textbf{Produkt} & \textbf{PVD} & \textbf{CVD} & \textbf{ALD}      \\
+           \hline
+           Metalle          & \cmark       & \cmark       & (\cmark)\tnote{a} \\
+           Legierungen      & \cmark       & \cmark       & ~                 \\
+           Metalloxide      & ~            & \cmark       & \cmark            \\
+           Nitride          & ~            & \cmark       & \cmark            \\
+           Chloride         & ~            & \cmark       & \cmark            \\
+           Silizium         & \cmark       & \cmark       & \cmark            \\
+           Siliziumoxid     & ~            & \cmark       & \cmark            \\
+           Diamant          & ~            & \cmark       & \cmark            \\
+           \hline
+         \end{tabular}
+       \end{minipage}
+    & \\
+    \end{tabularx}
+    \begin{tablenotes}
+    \item[a] Metall-ALD ist schwierig, weshalb in der Regel andere Methoden zum Einsatz kommen
+    \end{tablenotes}
+  \end{threeparttable}
+  \todoline{Jörg: ``gilt als schwierig'' - finde nix aussagekräftiges dazu. Kannst du das erläutern?}
+\end{table}
 
 \begin{figure}
   \captionsetup[subfigure]{format=plain}
@@ -68,62 +117,10 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
   \label{fig:reactors}
 \end{figure}
 
-\begin{table}
-  \oddrowcolors
-  \caption[Eigenschaften von PVD-, CVD- und ALD-Prozessen]{Eigenschaften von PVD-, CVD- und ALD-Prozessen}
-  \label{tab:deposition-comparison}
-  \begin{tabularx}{\textwidth}{|Xccc|}
-    \hline
-    \textbf{Eigenschaften} & \textbf{PVD}    & \textbf{CVD}       & \textbf{ALD}         \\
-    \hline
-    reaktiv                &                 & \cmark             & \cmark               \\
-    kontinuierlich         & \cmark          & \cmark             & zyklisch             \\
-    Gas-Edukte             & Atome, Moleküle & Precursor-Moleküle & Precursor-Moleküle   \\
-    \# Edukte              & 1               & 1+                 & 2+                   \\
-    Nebenprodukte          &                 & \cmark             & \cmark               \\
-    Wachstumsrate          & $\sim t$        & $\sim t$           & $\sim n_\text{cyc.}$ \\
-    \hline
-  \end{tabularx}
-\end{table}
-
-\begin{table}
-  \begin{threeparttable}
-    \caption[Auswahl möglicher Produkte von PVD, CVD und ALD]{
-      Auswahl möglicher Produkte von PVD, CVD und ALD.
-      Weitere Produkte und Precursor finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012}.
-    }
-    \label{tab:deposition-materials}
-    \begin{tabularx}{\textwidth}{XcX}
-     & \begin{minipage}[t]{0.55\textwidth}
-         \oddrowcolors
-         \centering
-         \begin{tabular}{|lccc|}
-           \hline
-           \textbf{Produkt} & \textbf{PVD} & \textbf{CVD} & \textbf{ALD}      \\
-           \hline
-           Metalle          & \cmark       & \cmark       & (\cmark)\tnote{a} \\
-           Legierungen      & \cmark       & \cmark       & ~                 \\
-           Metalloxide      & ~            & \cmark       & \cmark            \\
-           Nitride          & ~            & \cmark       & \cmark            \\
-           Chloride         & ~            & \cmark       & \cmark            \\
-           Silizium         & \cmark       & \cmark       & \cmark            \\
-           Siliziumoxid     & ~            & \cmark       & \cmark            \\
-           Diamant          & ~            & \cmark       & \cmark            \\
-           \hline
-         \end{tabular}
-       \end{minipage}
-    & \\
-    \end{tabularx}
-    \begin{tablenotes}
-    \item[a] Metall-ALD ist zwar möglich, aber mit vielen Hürden verbunden.\todoline{sinnvoller Satz!}
-    \end{tablenotes}
-  \end{threeparttable}
-\end{table}
-
 \subsection{Physikalische Gasphasenabscheidung}
 
 Physikalische Gasphasenabscheidungen (PVD, Physical Vapor Deposition) sind eine grundlegende Art von Abscheidungsprozessen, bei denen einzelne Atome nichtreaktiv auf einer Oberfläche adsorbieren.
-Zu ihnen zählt neben der thermischen oder elektrischen Evaporation auch Sputtering, bei dem aus einem Block des gewünschten Materiales (Target) per Elektronen- oder Ionenstrahl kontinuierlich Atome herausgeschlagen werden, die sich dann auf dem Substrat absetzen und dort zu einer dünnen Schicht verbinden.
+Zu ihnen zählt neben der thermischen oder elektrischen Evaporation auch Sputtering, bei dem aus einem Block des gewünschten Materiales (Target) per Elektronen- oder Ionenstrahl kontinuierlich Atome herausgeschlagen werden, die sich dann auf dem Substrat absetzen und dort zu einer dünnen Schicht verbinden\cite{mattox_handbook_2010,helmersson_ionized_2006}.
 Anhand der Energien der herausschlagenden Partikel, dem Teilchenstrom und der Substrattemperatur lässt sich dabei die Wachstumsrate und Qualität des abgeschiedenen Dünnfilmes beeinflussen.
 Durch die geradlinige Ausbreitung der aus dem Target evaporierten oder geschlagenen Partikel lassen sich zwar dünne, konforme Schichten auf glatten Substraten erzeugen\cite{svorcik_annealing_2011}, doch wird dadurch eine ebenmäßige Beschichtung komplizierter Geometrien verhindert.
 Die Abscheidung gemischter Systeme wie Legierungen und mehrlagigen Schichten wird hierbei durch Nutzung mehrerer Targets ermöglicht\cite{cammarata_nanoindentation_1990}.
@@ -131,18 +128,19 @@ Die Abscheidung gemischter Systeme wie Legierungen und mehrlagigen Schichten wir
 \subsection{Chemische Gasphasenabscheidung}
 
 Während einer Chemischen Gasphasenabscheidung (CVD, Chemical Vapor Deposition) adsorbieren sogenannte Precursormoleküle physikalisch auf dem Substrat und reagieren im Anschluss mit an der Oberfläche befindlichen Atomen.
-Dabei werden entweder Teile des Precursors auf der Oberfläche hinterlassen oder von vorherigen Reaktionen verbliebene Precursorliganden von der Oberfläche entfernt, wodurch bei entsprechender Prozessgestaltung gewünschte Stöchiometrien und Bindungen bevorzugt gebildet werden.
+Dabei werden entweder Teile des Precursors auf der Oberfläche hinterlassen oder von vorherigen Reaktionen verbliebene Precursorliganden von der Oberfläche entfernt, wodurch bei entsprechender Prozessgestaltung gewünschte Stöchiometrien und Bindungen bevorzugt gebildet werden\cite{pierson_handbook_1999}.
+.
 Abbildung~\ref{fig:ald-schema} stellt diese Vorgehensweise für ALD-Prozesse dar, die eine Spezialisierung von CVD-Prozessen sind und im nächsten Abschnitt vorgestellt werden.
 Da es sich um einen kontinuierlichen Prozess handelt, befinden sich meist zwei Precursorgase gleichzeitig im Reaktor, wo sie idealerweise erst auf der Oberfläche miteinander reagieren, da Reaktionen zwischen ihnen in der Gasphase neben einem erhöhtem Gasverbrauch zu Verunreinigungen und Partikelbildung führen können.
 
 Für erfolgreiche Abscheidungsprozesse ist es wichtig, neben passenden Umgebungsbedingungen auch Precursormoleküle zu wählen, die einerseits eine hohe Qualität des Filmes gewährleisten, andererseits kompakt genug sind, um hohe Wachstumsraten zu ermöglichen.
 Zudem sollten die gasförmigen Nebenprodukte inert sein, um nicht mit der Oberfläche oder der Reaktorwand zu reagieren, während sie mit dem kontinuierlichen Gasfluss aus dem Reaktor gespült werden.
 Auch eine physikalische Adsorption der Nebenprodukte auf der Oberfläche kann den Dünnfilm verunreinigen.
-Dabei sind stets die Prozesstemperaturen, -drücke, Reaktionsbarrieren und die Stabilität aller involvierten Moleküle zu beachten, wodurch auch \todo{Anmerkung von Jörg: das gilt an sich für alle Abscheideprozesse}alle chemischen Gasphasenabscheidungsprozesse oft in monatelanger Arbeit optimiert werden müssen.
-Wie bei PVD lässt sich die Schichtdicke auf mehrere Nanometer genau kontrollieren, was hinsichtlich einer gegenüber ALD vergleichsweise hohen \todo{ref}Wachstumsrate für viele Anwendungen ausreichend ist.
+Dabei sind stets die Prozesstemperaturen, -drücke, Reaktionsbarrieren und die Stabilität aller involvierten Moleküle zu beachten.
+Wie bei PVD lässt sich die Schichtdicke auf mehrere Nanometer genau kontrollieren, was hinsichtlich einer gegenüber ALD vergleichsweise hohen Wachstumsrate (\SI{>1}{\micro\meter\per\hour} im Kontrast zu \SI{0.1}{\nano\meter} pro Zyklus je \SIrange{1}{10}{\second}\cite{pierson_handbook_1999,puurunen_surface_2005}) für viele Anwendungen ausreichend ist.
 
-\todoline{Abbildung Beispiel Precursor-Moleküle}
-\missingfigure{Beispiel Precursor-Moleküle}
+%% {Wenn Zeit bleibt: Abbildung Beispiel Precursor-Moleküle}
+%% \missingfigure{Beispiel Precursor-Moleküle}
 
 \subsection{Atomlagenabscheidung}
 
@@ -157,7 +155,8 @@ Wie bei PVD lässt sich die Schichtdicke auf mehrere Nanometer genau kontrollier
   \label{fig:ald-schema}
 \end{figure}
 
-Als Variation einer Chemischen Gasphasenabscheidung entstanden Atomlagenabscheidungen (ALD, Atomic Layer Deposition) mit dem Ziel\cite{suntola_method_1977}, konforme dünne Schichten kontrolliert in einzelnen Atomlagen mit Sub-Nanometer-Genauigkeit der Schichtdicke aufwachsen zu lassen.
+Als Variation einer Chemischen Gasphasenabscheidung entstanden Atomlagenabscheidungen (ALD, Atomic Layer Deposition) mit dem Ziel, konforme dünne Schichten kontrolliert in einzelnen Atomlagen mit Sub-Nanometer-Genauigkeit der Schichtdicke aufwachsen zu lassen\cite{suntola_method_1977,puurunen_surface_2005,elliott_atomic-scale_2012}.
+.
 Dazu werden zwei Precursorgase wechselweise in separaten Schritten (Halbzyklen) in den Reaktor geleitet, wo sie wie bei CVD-Prozessen mit der Oberfläche reagieren und so langsam eine Schicht bilden (Abbildung~\ref{fig:ald-schema}).
 Zwischen den Precursorschritten entfernen Spülschritte mit inertem Gas verbleibende Precursormoleküle und Nebenprodukte aus dem Reaktor und verhindern so gleichzeitige Reaktionen beider Precursorgase.
 So werden einerseits Gasphasenreaktionen vermieden, andererseits limitiert die Sättigung der Oberfläche mit Precursorliganden in jedem Precursorschritt die Zunahme der Dicke pro Zyklus.
@@ -200,9 +199,8 @@ Eine ausführlichere Übersicht zu Atomlagenabscheidungen und zu möglichen Prec
 \todoline{fig:methodscales}
 \missingfigure{fig:methodscales}
 
-Für die Simulation von Gasphasenabscheidungen stehen verschiedene numerische Methoden zur Verfügung, welche die Darstellung auf unterschiedlichen Zeit- und Größenordnungen ermöglichen (Tabelle~\ref{tab:deposition-simulations})\todo{fig:methodscales}.
+Für die Simulation von Gasphasenabscheidungen stehen verschiedene numerische Methoden zur Verfügung, welche die Darstellung auf unterschiedlichen Zeit- und Größenordnungen ermöglichen (Tabelle~\ref{tab:deposition-simulations}, Abbildung~\ref{fig:methodscales}).
 Jede dieser Methoden basiert auf anderen Annahmen und Formulierungen, so dass sich ihre Anwendungsgebiete zwar nur marginal überschneiden, aber der Transfer von Ergebnissen zwischen den Methoden zu präziseren Vorhersagen führen kann.
 So können CFD-Reaktorsimulationen den Gasverbrauch an charakteristischen Punkten der Oberfläche durch KMC-Simulationen ermitteln, welche wiederum auf DFT-Daten für Reaktionsraten und -energien zurück greift.
-\todo{Detail, warum drauf verzichtet wird}Bisherige Simulationen verzichten meist auf eine strukturelle Betrachtungen der abgeschiedenen Schicht, wie sie etwa mit molekulardynamischen Rechnungen möglich werden.
-Gerade für Anwendungen in der Nanoelektronik sind die strukturellen Eigenschaften der Schichten aber eng mit der benötigten Funktion (mechanische und elektronische Eigenschaften) verknüpft, so dass eine Vorhersage der strukturellen Eigenschaften durch Simulationen wünschenswert ist.
-\todoline{begreiflich machen, dass sich aus der Struktur auch elektronische und thermodynamische Eigenschaften}
+Bisherige Simulationen verzichten aus Gründen der notwendigen Laufzeit meist auf eine strukturelle Betrachtungen der abgeschiedenen Schicht, wie sie etwa mit molekulardynamischen Rechnungen möglich werden.
+Gerade für Anwendungen in der Mikro- und Nanoelektronik sind die strukturellen Eigenschaften der Schichten eng mit ihrer Funktion (mechanische und elektronische Eigenschaften) verknüpft und lassen sich aus ihnen ermitteln, so dass eine strukturelle Beschreibung für eine umfassende Betrachtung des Prozesses unerlässlich ist.
