--- a/present.tex
+++ b/present.tex
@@ -82,7 +82,7 @@ Der durch unterschiedliche Bindungslängen entstehende Versatz zwischen den Kupf
 
 \subsubsection{Silizium}
 Für Silizium finden sich thermodynamische Expansions-Simulationen von \textsc{Buda et al.}\cite{buda_thermal_1990} sowie Untersuchungen von \textsc{Insepov et al.}\cite{insepov_molecular_1995} zur Auswirkung von gerichteten Cluster-Einschlägen in Abhängigkeit der Einschlagsenergie.
-\textsc{Song et al.}\cite{song_reactive_2012} haben außerdem die Oxidierung von Silizium-Nanopartikeln mit reaktiven Kraftfeldern simuliert.
+\textsc{Torre et al.}\cite{torre_study_2002} haben außerdem die Oxidierung von Silizium-Nanopartikeln mit Drei-Teilchen-Potentialen simuliert.
 %% {mehr! PVD und Oxidation / Hydroxylierung von Oberflächen} - Gibt's nicht
 
 \subsubsection{Aluminiumoxid}
